--- a/config/locales/es.json
+++ b/config/locales/es.json
@@ -15,5 +15,7 @@
 	"My account": "Mi cuenta",
 	"Calendar": "Calendario",
 	"Update my account": "Actualizar mi cuenta",
-	"Log out": "Cerrar sesión"
+	"Log out": "Cerrar sesión",
+	"Name": "Name",
+	"Last name": "Last name"
 }
