Materias y tutorias con funcionalidad limitada, algunas cosas reparadas y algunas otras rotas

--- a/config/locales/es.json
+++ b/config/locales/es.json
@@ -19,5 +19,10 @@
 	"Name": "Nombre",
 	"Error": "Error",
 	"Success": "Éxito",
-	"Warning": "Advertencia"
+	"Warning": "Advertencia",
+	"Subject": "Materia",
+	"Add new subject": "Agregar materia",
+	"Maximum": "Maximo",
+	"Request tutorship": "Solicitar tutoria",
+	"to request tutorship": "para solicitar tutoria"
 }
