Aceptar tutorias, limite de estudiantes, dashboard de tutor y bases de notificaciones

--- a/config/locales/es.json
+++ b/config/locales/es.json
@@ -24,5 +24,8 @@
 	"Add new subject": "Agregar materia",
 	"Maximum": "Maximo",
 	"Request tutorship": "Solicitar tutoria",
-	"to request tutorship": "para solicitar tutoria"
+	"to request tutorship": "para solicitar tutoria",
+	"Request pending": "Request pending",
+	"Offer tutorship": "Offer tutorship",
+	"Manage my tutorships": "Manage my tutorships"
 }
