Calendario de tutorias, hacerse tutor, horarios para las tutorias

--- a/config/locales/es.json
+++ b/config/locales/es.json
@@ -25,7 +25,8 @@
 	"Maximum": "Maximo",
 	"Request tutorship": "Solicitar tutoria",
 	"to request tutorship": "para solicitar tutoria",
-	"Request pending": "Request pending",
-	"Offer tutorship": "Offer tutorship",
-	"Manage my tutorships": "Manage my tutorships"
+	"Request pending": "Solicitud pendiente",
+	"Offer tutorship": "Ofrecer tutoría",
+	"Manage my tutorships": "Administrar mis tutorias",
+	"Become tutor": "Hacerme tutor"
 }
